--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -47,6 +47,7 @@ section{
             text-align: center;
             color: ($success);
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            font-size: 28px;
         }
     }
     h2 {
@@ -61,6 +62,11 @@ section{
     .imagen{
         width: 100%;
         border-radius: 2%;
+        transition: transform 0.1s;
+        &:hover {
+            
+            transform:scale(1.2,1.2) ;
+        }
     } 
 
     .btn-primary {
